@@ -1,3 +1,10 @@
+2002-09-18  Larry Jones  <lawrence.jones@eds.com>
+
+	* client.c (call_in_directory): Don't create admin directory when
+	exporting into an existing directory.
+	(Reported by Jens Engel <Jens.Engel@marconi.com>.)
+	* sanity.sh (basic2): New tests for above.
+
 2002-09-16  Jim Meyering  <meyering@lucent.com>
 
 	* server.c (do_cvs_command): Move declarations of locals, timeout and
